<resources>
    <dimen name="button_text_size">25sp</dimen>
    <dimen name="number_size">65sp</dimen>
    <dimen name="equation_size">30sp</dimen>
    <string name="app_name">Calculator</string>
    <string name="button_simple">Simple</string>
    <string name="button_advanced">Advanced</string>
    <string name="button_about">About</string>
    <string name="button_exit">Exit</string>
    <string name="button_equal">=</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_zero">0</string>
    <string name="button_one">1</string>
    <string name="button_two">2</string>
    <string name="button_three">3</string>
    <string name="button_four">4</string>
    <string name="button_five">5</string>
    <string name="button_six">6</string>
    <string name="button_seven">7</string>
    <string name="button_eight">8</string>
    <string name="button_nine">9</string>
    <string name="button_dot">.</string>
    <string name="button_opposite">+/-</string>
    <string name="button_AC">AC</string>
    <string name="button_C">C</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tg">tg</string>
    <string name="button_log">log</string>
    <string name="button_ln">ln</string>
    <string name="button_percent">%</string>
    <string name="button_pow2">x^2</string>
    <string name="button_pow">x^y</string>
    <string name="button_reverse">1/x</string>
    <string name="button_sqrt">√</string>
    <string name="about_me1">Hello. My name is Emilia.\nThis is my first Android application.</string>
    <string name="about_me2">This is my first Android application.</string>
</resources>
